--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,21 @@
 #spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=diplom_work;integratedSecurity=false;user=vitali;
 #spring.datasource.url=jdbc:sqlserver://localhost:1433;instanceName=SQLEXPRESS;databaseName=diplom_work;integratedSecurity=false;
 #spring.datasource.url=jdbc:sqlserver://localhost;integratedSecurity=true;
-spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.url=jdbc:mysql://localhost:3306/diplom_work?useUnicode=yes&characterEncoding=UTF-8
+
+#FOR MS SQL
+#spring.datasource.url=jdbc:sqlserver://localhost;integratedSecurity=true;
 #spring.datasource.username=vitali
 #spring.datasource.password=vitali18
+#spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#spring.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
+
+
+spring.datasource.username=root
+spring.datasource.password=root
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
@@ -11,10 +23,14 @@ spring.jpa.show-sql=true
 #spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #spring.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.unic
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 #server.port=8090
 
@@ -25,6 +41,10 @@ spring.servlet.multipart.max-file-size=10Mb
 spring.servlet.multipart.max-request-size=10Mb
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+server.port=8081
+
+hibernate.connection.characterEncoding=utf-8
+hibernate.event.merge.entity_copy_observer=allow
 
 
 #medium start
