--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,18 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 #spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 #server.port=8090
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+
+spring.servlet.multipart.max-file-size=10Mb
+spring.servlet.multipart.max-request-size=10Mb
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
 #medium start
