--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.unic
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 #server.port=8090
 
@@ -38,6 +37,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
 spring.servlet.multipart.max-file-size=10Mb
+spring.servlet.multipart.enabled=false
 spring.servlet.multipart.max-request-size=10Mb
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
