--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,9 +36,12 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
-spring.servlet.multipart.max-file-size=10Mb
-spring.servlet.multipart.enabled=false
-spring.servlet.multipart.max-request-size=10Mb
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-request-size=10MB
+#max file and request size
+#spring.http.multipart.max-file-size=10MB
+#spring.http.multipart.max-request-size=11MB
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.port=8081
